@@ -20,11 +20,13 @@ export(accuracy)
 export(all_words)
 export(as_count)
 export(as_terms)
+export(classification_project)
 export(classify)
 export(colo)
 export(coverage)
 export(frequent_terms)
 export(get_uncovered)
+export(is.global)
 export(ngram_collocations)
 export(plot_ca)
 export(plot_counts)
