@@ -30,6 +30,9 @@ termco 0.1.0
 
 * `split_data` added for easy creationg of training and testing data.
 
+* `classification_project` added to make a classification modeling project
+  template.
+
 **MINOR FEATURES**
 
 IMPROVEMENTS
